--- a/alpine/Dockerfile.template.hbs
+++ b/alpine/Dockerfile.template.hbs
@@ -5,7 +5,7 @@ MAINTAINER Gergely Nemeth <gergely@risingstack.com>
 RUN apk add --update curl make gcc g++ binutils-gold python linux-headers paxctl libgcc libstdc++ && \
   curl -sSL https://nodejs.org/dist/{{VERSION}}/node-{{VERSION}}.tar.gz | tar -xz && \
   cd /node-{{VERSION}} && \
-  ./configure --prefix=/usr {{CONFIG_FLAGS}} && \
+  ./configure --prefix=/usr && \
   make -j$(grep -c ^processor /proc/cpuinfo 2>/dev/null || 1) && \
   make install && \
   paxctl -cm /usr/bin/node && \
