fix(alpine): keep gcc

--- a/alpine/Dockerfile.hbs
+++ b/alpine/Dockerfile.hbs
@@ -9,7 +9,7 @@ RUN curl -sSL https://nodejs.org/dist/{{VERSION}}/node-{{VERSION}}.tar.gz | tar 
   make install && \
   paxctl -cm /usr/bin/node && \
   cd / && \
-  apk del curl make gcc g++ binutils-gold python linux-headers paxctl {{DEL_PKGS}} && \
-  rm -rf /etc/ssl /node-{{VERSION}} {{RM_DIRS}} \
+  apk del curl binutils-gold python linux-headers paxctl && \
+  rm -rf /etc/ssl /node-{{VERSION}} /usr/include \
     /usr/share/man /tmp/* /var/cache/apk/* /root/.npm /root/.node-gyp \
     /usr/lib/node_modules/npm/man /usr/lib/node_modules/npm/doc /usr/lib/node_modules/npm/html
