--- a/alpine/Dockerfile.hbs
+++ b/alpine/Dockerfile.hbs
@@ -13,3 +13,5 @@ RUN curl -sSL https://nodejs.org/dist/{{VERSION}}/node-{{VERSION}}.tar.gz | tar 
   rm -rf /etc/ssl /node-{{VERSION}} /usr/include \
     /usr/share/man /tmp/* /var/cache/apk/* /root/.npm /root/.node-gyp \
     /usr/lib/node_modules/npm/man /usr/lib/node_modules/npm/doc /usr/lib/node_modules/npm/html
+
+WORKDIR /usr/src/node-app
