--- a/alpine/Dockerfile.hbs
+++ b/alpine/Dockerfile.hbs
@@ -13,7 +13,7 @@ RUN curl -sSL https://nodejs.org/dist/{{nodeVersion}}/node-{{nodeVersion}}.tar.g
   make install && \
   paxctl -cm /usr/bin/node && \
   cd / && \
-  rm -rf /etc/ssl /node-{{nodeVersion}} \
+  rm -rf /node-{{nodeVersion}} \
     /usr/share/man /tmp/* /var/cache/apk/* /root/.npm /root/.node-gyp \
     /usr/lib/node_modules/npm/man /usr/lib/node_modules/npm/doc /usr/lib/node_modules/npm/html
 
